moodle permission importer v1

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -164,7 +164,7 @@ app:
       presentation: Présentation générale
       prerequisites: Prérequis / Rémédiations
       objectives: Objectif du cours
-      activities: Contenu et activités
+      activities: Programme détaillé
       evaluations: Modalités d'évaluation
       equipments: Matériel et ressources
       information: Informations pratiques
