--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -254,6 +254,7 @@ app:
     form:
       description: À la fin de ce cours, l'étudiant devrait être capable de…
       add: Ajouter
+      edit: Modifier
   evaluation:
     view:
       first_session: 1ère session
