--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -171,6 +171,19 @@ app:
       closing_remarks: Le mot de la fin
   dashboard:
     title: Tableau de bord
+    progress: Progression du remplissage
+    card:
+      publish_syllabus: Publier le syllabus
+      publish_success: Bravo le syllabus a été publié
+      see_student: Voir le syllabus étudiant
+      not_duplicate_syllabus: Ne pas dupliquer le syllabus pour l'année suivante
+      duplicate_syllabus: Dupliquer le syllabus pour l'année suivante
+      duplicate_syllabus_other_course: Dupliquer le syllabus sur un autre cours
+    intro_panel:
+      title: Découvrez votre tout nouveau syllabus
+      description: Communiquez et clarifiez le contenu de votre cours, mettez en valeur vos objectifs et préparer vos étudiants a ce qui les attend.
+      access_tutorial: Accéder au tutoriel
+      tutorial_description: Le tutoriel arrive bientôt, si vous souhaitez accéder à l'ancien tutoriel pour vous familiariser avec les fonctionnalités, <a href="https://unspod.unice.fr/video/7110-comment-remplir-son-syllabus-sur-moodle/" target="_blank">cliquez ici</a>
     modal:
       title: Vers quel syllabus voulez-vous dupliquer le contenu ?
       close: Fermer
@@ -303,7 +316,7 @@ app:
     view:
       additionnal_info: Informations pratiques
       edit: Mettre à jour
-      agenda: Informations dont vous disposez sur le calendrier du cours, des examens…
+      agenda: Calendrier du cours
       organization: Organisation du cours
     form:
       save: Sauvegarder
