--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -351,6 +351,8 @@ app:
         level: Levels
         period: Periods
         description: Description
+        description_message: To find copyright free images:
+        structure: Structure
       teachers:
         add_teacher: Add a teacher
         empty_teacher: No teachers have yet been added to the team.
@@ -501,6 +503,7 @@ app:
         domain: Disciplinary domain
         level: Course's level
         campus: Campus
+        semester: Semester
         language: Language
         belong_to: Belong to %title%
         teachers: Teaching team
